[gd_scene load_steps=4 format=3 uid="uid://djufr2nq72uc6"]

[ext_resource type="Script" uid="uid://nmw20mbrh4q6" path="res://scripts/gold_counter.gd" id="1_4ch30"]
[ext_resource type="Texture2D" uid="uid://cuoii5fmlbueu" path="res://assets/GoldGui.png" id="2_7eso2"]
[ext_resource type="AudioStream" uid="uid://b5bmbllqky57u" path="res://assets/Audio/Retro Event Wrong Simple 03.wav" id="3_7eso2"]

[node name="GoldCounter" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource("1_4ch30")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 32.0

[node name="HSplitContainer" type="VBoxContainer" parent="PanelContainer"]
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="CoinImg" type="TextureRect" parent="PanelContainer/HSplitContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_7eso2")

[node name="GoldLabel" type="Label" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8

[node name="NotEnoughGoldAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7eso2")
